// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for PR #2940 foreign businesses 1`] = `
"O123456789202401120260119+00000002000+000000000+00000000000+000000000000000001+00000000000+000000000+000000000000000000+00000000000
I987654321202401150000000000001000000000+0000001000000000000
S123456789202401150000000000001000000000+0000002000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for imports and exports 1`] = `
"O123456789202401120260119+00000001000+000000000+00000000000+000000000000000001+00000000000+000000000+000000000000000000+00000000000
R123456789202401150000000000000000000000+0000003000000000000
Y123456789202401150000000000001000000000+0000005000000000000
S123456789202401150000000000001000000000+0000001000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for standard mixed report 1`] = `
"O123456789202401120260119+00000003000+000000000+00000000000+000000000000000002+00000000000+000000000+000000000000000002+00000000000
S123456789202401150000000000001000000000+0000001000000000000
S123456789202401150000000000002000000000+0000002000000000000
T123456789202401150000000000001000000000+0000000500000000000
T123456789202401150000000000002000000000+0000000300000000000
Y123456789202401150000000000001000000000+0000005000000000000
X123456789"
`;

exports[`pcn.helper > Snapshot Tests > PCN874 Format Snapshots > should match snapshot for zero-VAT transactions 1`] = `
"O123456789202401120260119+00000000000+000000000+00000000000+000000000000000000+00000000000+000000000+000000000000000000+00000000000
S123456789202401150000000000001000000000+0000001000000000000
Y123456789202401150000000000001000000000+0000002000000000000
X123456789"
`;
